# Binify

./: .gitignore  README.md
.github/workflows/: cloud-check.yml
cloud/: README.md  biome.json  docker-compose.yaml  package-lock.json  package.json
cloud/api/: .env  Dockerfile  README.md  biome.json  package.json  tsconfig.json
cloud/api/prisma/: schema.prisma
cloud/api/src/: env.ts  index.ts  main.ts  router.ts  trpcRouter.ts
cloud/api/src/@types/: index.d.ts
cloud/api/src/auth/: expressAuth.ts  jwt.ts  trpcAuth.ts
cloud/api/src/core/: accounts.ts  alerts.ts  bins.ts  organizations.ts
cloud/api/src/devUtils/: createMeasurements.ts
cloud/api/src/jobs/: fulnessAlertJob.ts  telegramUpdatesJob.ts
cloud/api/src/libs/: pino.ts  prisma.ts  telegram.ts  trpc.ts
cloud/api/src/router/: accountsRouter.ts  alertsRouter.ts  binsRouter.ts  organizationsRouter.ts
cloud/api/src/utils/: calculatePercentage.ts
cloud/hub/: .env  package.json  tsconfig.json
cloud/hub/env/: .env  dev.env
cloud/hub/src/: BackendDataAdapter.ts  BufferPersistanceAdapter.ts  DataBuffer.ts  DataSync.ts  Env.ts  MeasurmentsHandler.ts  index.ts
cloud/web/: .env  Caddyfile  Dockerfile  components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json
cloud/web/src/: App.tsx  env.ts  index.css  main.tsx  trpc.ts
cloud/web/src/components/: ConfirmationDialog.tsx  DateNavigator.tsx  DynamicContent.tsx  Layout.tsx  (+23 more)
firmware/: CMakeLists.txt  README.md  build.zig
firmware/src/: air_sensor.zig  distance_sensor.zig  http_client.zig  http_request_builder.zig  main.zig
(+76 files in other folders)
